--- a/package.json
+++ b/package.json
@@ -1,81 +1,74 @@
 {
   "name": "sbtree-frontend",
-  "title": "SBTreeFrontend",
-  "version": "0.0.1",
   "author": "sbteam",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gilbarbara/react-redux-saga-boilerplate"
-  },
-  "bugs": "https://github.com/gilbarbara/react-redux-saga-boilerplate/issues",
+  "version": "0.0.1",
+  "description": "",
+  "keywords": [],
   "license": "MIT",
-  "keywords": [
-    "React",
-    "React-Router",
-    "Redux",
-    "Redux-Saga",
-    "Webpack",
-    "ES6"
-  ],
-  "devDependencies": {
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.4.0",
-    "react-test-renderer": "^16.0.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-hot-middleware": "^2.19.1"
+  "main": "server.js",
+  "scripts": {
+    "build": "rimraf ./dist && webpack --config config/webpack.config.js --mode production",
+    "dev": "webpack-dev-server --config config/webpack.config.js  --open --mode development",
+    "start": "node server",
+    "stats": "webpack --config config/webpack.config.js  --json > stats.json",
+    "stats:serve": "webpack-bundle-analyzer stats.json ./dist -p 8088",
+    "lint": "eslint .",
+    "no-unstaged": "git diff --exit-code --name-only --quiet"
   },
+  "precommit": [
+    "no-unstaged",
+    "lint"
+  ],
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
-    "classnames": "^2.2.5",
-    "compression": "^1.7.1",
     "connected-react-router": "^6.3.1",
-    "copy-webpack-plugin": "^4.1.0",
-    "css-loader": "^0.28.7",
-    "express": "^4.16.1",
-    "file-loader": "^1.1.4",
-    "history": "^4.7.2",
-    "html-webpack-plugin": "^2.30.1",
-    "install": "^0.10.1",
-    "jest": "^21.2.1",
-    "jquery": "^3.3.1",
-    "localStorage": "^1.0.3",
-    "popper.js": "^1.12.9",
-    "query-string": "^5.0.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-select": "^1.2.1",
-    "redux": "^3.7.2",
-    "redux-form": "^7.0.4",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
+    "dotenv-webpack": "^1.7.0",
+    "express": "^4.16.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^0.15.6",
-    "reselect": "^3.0.1",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.6.0",
-    "whatwg-fetch": "^2.0.3"
+    "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
+    "reselect": "^4.0.0",
+    "rimraf": "^2.6.3",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.4",
+    "webpack-cli": "^3.2.3",
+    "whatwg-fetch": "^3.0.0"
   },
-  "scripts": {
-    "start": "node tools/start",
-    "build": "node tools/build",
-    "lint": "eslint  --ext .js --ext .jsx src config test tools",
-    "precommit": "node tools upstream && lint-staged && flow"
-  }
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.14.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-react": "^7.12.4",
+    "pre-commit": "^1.2.2",
+    "precommit": "^1.2.2",
+    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-dev-server": "^3.1.14"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sbnaukmateam/SBTreeFrontend"
+  },
+  "bugs": "https://github.com/sbnaukmateam/SBTreeFrontend/issues"
 }
