--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react": "^7.12.4",
     "pre-commit": "^1.2.2",
     "precommit": "^1.2.2",
+    "url-loader": "^1.1.2",
     "webpack-bundle-analyzer": "^3.0.4",
     "webpack-dev-server": "^3.1.14"
   },
