--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "copy-webpack-plugin": "^4.6.0",
@@ -36,6 +37,8 @@
     "express": "^4.16.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -65,6 +68,7 @@
     "eslint-plugin-react": "^7.12.4",
     "pre-commit": "^1.2.2",
     "precommit": "^1.2.2",
+    "url-loader": "^1.1.2",
     "webpack-bundle-analyzer": "^3.0.4",
     "webpack-dev-server": "^3.1.14"
   },
