--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
@@ -45,6 +46,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
+    "react-sticky": "^6.0.3",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-logger": "^3.0.6",
@@ -52,6 +54,7 @@
     "request": "^2.88.0",
     "reselect": "^4.0.0",
     "rimraf": "^2.6.3",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
@@ -68,6 +71,7 @@
     "eslint-plugin-react": "^7.12.4",
     "pre-commit": "^1.2.2",
     "precommit": "^1.2.2",
+    "react-slick": "^0.23.2",
     "url-loader": "^1.1.2",
     "webpack-bundle-analyzer": "^3.0.4",
     "webpack-dev-server": "^3.1.14"
