--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-sticky": "^6.0.3",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
+    "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
