--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
+    "nedb": "^1.8.0",
     "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
@@ -49,6 +50,7 @@
     "react-sticky": "^6.0.3",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
+    "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
