--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "connected-react-router": "^6.3.1",
+    "connected-react-router": "=6.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
@@ -41,12 +41,12 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-onclickoutside": "^6.8.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
     "react-sticky": "^6.0.3",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
