--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
+    "nedb": "^1.8.0",
     "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
