--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "connected-react-router": "=6.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
+    "debounce": "^1.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
