--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
     "react": "^16.8.2",
+    "react-datepicker": "^2.2.0",
     "react-dom": "^16.8.2",
     "react-onclickoutside": "^6.8.0",
     "react-redux": "^6.0.0",
