--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-onclickoutside": "^6.8.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.4.3",
     "react-sticky": "^6.0.3",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
